@startuml SparepartUsageHistory_Tracking

' ===== STYLE =====
skinparam linetype ortho
skinparam class {
  BackgroundColor<<WebAPI>> LightBlue
  BackgroundColor<<Application>> LightGreen
  BackgroundColor<<Infrastructure>> LightYellow
  BackgroundColor<<Domain>> LightCoral
  BorderColor Black
  ArrowColor Black
}

' ===== WEBAPI =====
package "WebAPI Layer" {
  class SparepartUsageHistoryController <<WebAPI>> {
    + GetAll()
    + GetById(Guid)
    + Create(CreateUsageHistoryDto)
    + Update(Guid, UpdateUsageHistoryDto)
    + Delete(Guid)
    + GetBySparepart(Guid)
    + GetByCenter(Guid)
  }
}

' ===== APPLICATION =====
package "Application Layer" {

  interface ISparepartUsageHistoryService <<Application>> {
    + GetAllAsync(): Task<IServiceResult<List<SparepartUsageHistoryDto>>>
    + GetByIdAsync(Guid): Task<IServiceResult<SparepartUsageHistoryDto>>
    + CreateAsync(CreateUsageHistoryDto): Task<IServiceResult<SparepartUsageHistoryDto>>
    + UpdateAsync(Guid, UpdateUsageHistoryDto): Task<IServiceResult<SparepartUsageHistoryDto>>
    + DeleteAsync(Guid): Task<IServiceResult<bool>>
    + GetBySparepartIdAsync(Guid): Task<IServiceResult<List<SparepartUsageHistoryDto>>>
    + GetByCenterIdAsync(Guid): Task<IServiceResult<List<SparepartUsageHistoryDto>>>
  }

  interface ISparepartUsageHistoryRepository <<Application>> {
    + GetAllAsync(): Task<List<SparepartusagehistoryTuht>>
    + GetByIdAsync(Guid): Task<SparepartusagehistoryTuht?>
    + AddAsync(SparepartusagehistoryTuht): Task<SparepartusagehistoryTuht>
    + UpdateAsync(SparepartusagehistoryTuht): Task<SparepartusagehistoryTuht>
    + DeleteAsync(Guid): Task<bool>
    + GetBySparepartIdAsync(Guid): Task<List<SparepartusagehistoryTuht>>
    + GetByCenterIdAsync(Guid): Task<List<SparepartusagehistoryTuht>>
  }

  interface IUnitOfWork <<Application>> {
    + SparepartUsageHistoryRepository: ISparepartUsageHistoryRepository
    + SaveChangesAsync(): Task<int>
  }

  class SparepartUsageHistoryDto <<Application>> {
    + UsageId: Guid
    + SparepartId: Guid
    + CenterId: Guid
    + OrderSparepartId: Guid?
    + QuantityUsed: int
    + UsedDate: DateTime?
    + Status: string?
  }

  class CreateUsageHistoryDto <<Application>> {
    + SparepartId: Guid
    + CenterId: Guid
    + OrderSparepartId: Guid?
    + QuantityUsed: int
    + UsedDate: DateTime?
  }

  class UpdateUsageHistoryDto <<Application>> {
    + QuantityUsed: int
    + UsedDate: DateTime?
    + Status: string?
  }
}

' ===== INFRASTRUCTURE =====
package "Infrastructure Layer" {
  class SparepartUsageHistoryService <<Infrastructure>> {
    - _unitOfWork: IUnitOfWork
    + GetAllAsync()
    + GetByIdAsync()
    + CreateAsync()
    + UpdateAsync()
    + DeleteAsync()
    + GetBySparepartIdAsync()
    + GetByCenterIdAsync()
  }

  class SparepartUsageHistoryRepository <<Infrastructure>> {
    - _context: AppDbContext
    + GetAllAsync()
    + GetByIdAsync()
    + AddAsync()
    + UpdateAsync()
    + DeleteAsync()
    + GetBySparepartIdAsync()
    + GetByCenterIdAsync()
  }
}

' ===== DOMAIN =====
package "Domain Layer" {
  class SparepartusagehistoryTuht <<Domain>> {
    + Usageid: Guid
    + Sparepartid: Guid
    + Centerid: Guid
    + Ordersparepartid: Guid?
    + Quantityused: int
    + Useddate: DateTime?
    + Status: string?
    + Isactive: bool?
    + Createdat: DateTime?
    + Updatedat: DateTime?
  }

  class SparepartTuht <<Domain>> {
    + Sparepartid: Guid
    + Name: string
  }

  class Centertuantm <<Domain>> {
    + Centerid: Guid
    + Name: string
  }

  class Ordersparepart <<Domain>> {
    + Ordersparepartid: Guid
    + Orderid: Guid
    + Sparepartid: Guid
    + Quantity: int
  }
}

' ===== RELATIONSHIPS =====
SparepartUsageHistoryController --> ISparepartUsageHistoryService : calls
ISparepartUsageHistoryService <|.. SparepartUsageHistoryService : implements
SparepartUsageHistoryService --> IUnitOfWork : uses
IUnitOfWork --> ISparepartUsageHistoryRepository : provides
ISparepartUsageHistoryRepository <|.. SparepartUsageHistoryRepository : implements
SparepartUsageHistoryRepository --> SparepartusagehistoryTuht : manages

SparepartusagehistoryTuht --> SparepartTuht : tracks
SparepartusagehistoryTuht --> Centertuantm : at_center
SparepartusagehistoryTuht --> Ordersparepart : from_order

@enduml
